--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body { 
+/* body { 
   text-align: center;
 }
 
@@ -15,4 +15,4 @@ button {
 #save-btn {
   background-color: green;
   color : white;
-}
+} */
