blackjack game design on the page

--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body { 
+/* body { 
   text-align: center;
 }
 
@@ -15,4 +15,23 @@ button {
 #save-btn {
   background-color: green;
   color : white;
+} */
+
+body {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
+  background-image : url('Coding.jpg');
+  background-size: cover;
+  text-align: center;
+  color : white;
+  font-weight : bold;
+  font-size : 50px;
 }
+
+h1 {
+  color : goldenrod;
+}
+
+#message-el {
+  font-style : italic;
+}
+
