--- a/index.css
+++ b/index.css
@@ -35,3 +35,15 @@ h1 {
   font-style : italic;
 }
 
+
+
+button {
+  color : #016f32;
+  width : 150px;
+  background : goldenrod;
+  padding-top : 5px;
+  padding-bottom : 5px;
+  font-weight : bold;
+  border : none;
+  border-radius : 2px;
+}
