--- a/index.css
+++ b/index.css
@@ -17,7 +17,72 @@ button {
   color : white;
 } */
 
+
+
 body {
+  margin : 0;
+  padding : 10px;
+  font-family : Arial, Helvetica, sans-serif;
+}
+
+
+input {
+  width : 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  border : 1px solid #5f9341;
+  margin-bottom: 4px;
+}
+
+button {
+  background: #5f9341;
+  color : white;
+  padding : 10px 20px;
+  border : none;
+  font-weight : bold;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* BlackJack Game  */
+
+/* body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
   background-image : url('Coding.jpg');
   background-size: cover;
@@ -46,4 +111,4 @@ button {
   font-weight : bold;
   border : none;
   border-radius : 2px;
-}
+} */
