--- a/index.css
+++ b/index.css
@@ -18,8 +18,26 @@ button {
 } */
 
 
+html, body{
+  margin : 0;
+  padding : 0;
+  font-family : Arial, Helvetica, sans-serif;
+}
 
-body {
+#box {
+  cursor : pointer;
+  background: lightseagreen;
+  padding : 40px;
+  width : 200px;
+  text-align: center;
+  margin : 20px auto;
+  color : white;
+  font-weight : bold;
+}
+
+
+
+/* body {
   margin : 0;
   padding : 10px;
   font-family : Arial, Helvetica, sans-serif;
@@ -40,7 +58,7 @@ button {
   padding : 10px 20px;
   border : none;
   font-weight : bold;
-}
+} */
 
 
 
