--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ button {
 } */
 
 
-html, body{
+/* html, body{
   margin : 0;
   padding : 0;
   font-family : Arial, Helvetica, sans-serif;
@@ -33,11 +33,11 @@ html, body{
   margin : 20px auto;
   color : white;
   font-weight : bold;
-}
+} */
 
 
 
-/* body {
+ body {
   margin : 0;
   padding : 10px;
   font-family : Arial, Helvetica, sans-serif;
@@ -58,7 +58,7 @@ button {
   padding : 10px 20px;
   border : none;
   font-weight : bold;
-} */
+} 
 
 
 
